--- a/templates/template.html
+++ b/templates/template.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="sv">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/templates/header/headerStyle.css" />
+    <link rel="stylesheet" href="/templates/footer/footer.css" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/061e52cdfe.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>MYH.se |</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/css/style.css" />
-  <link rel="stylesheet" href="/templates/header/headerStyle.css" />
-  <link rel="stylesheet" href="/templates/footer/footer.css" />
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://kit.fontawesome.com/061e52cdfe.js" crossorigin="anonymous"></script>
-  <title>MYH.se |</title>
-</head>
+  <body>
+    <header class="topHeader">
+      <a href="/index/index.html" aria-label="Till startsidan">
+        <img
+          id="biglogo"
+          src="/templates/header/myh_logo_white_big_shaded.png"
+          alt="myh.se"
+        />
+        <img
+          id="smalllogo"
+          src="/templates/header/myh_logo_white_big_shaded_small.png"
+          alt="myh.se"
+        />
+      </a>
 
-<<<<<<< HEAD
       <nav aria-label="Huvudmeny">
         <label for="ham-check" id="hamburger">&#9776;</label>
         <input type="checkbox" name="ham-check" id="ham-check" />
@@ -58,167 +74,109 @@
         <a href="#" aria-label="Sök på webbplatsen" class="button"
           ><i class="fas fa-search"></i> Sök</a
         >
-        <!-- <input class="button" type="submit" value="Skicka"> -->
       </form>
-      <!-- <form>
-=======
-<body>
-  <header class="topHeader">
-    <a href="/index/index.html" aria-label="Till startsidan">
-      <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png" alt="myh.se" />
-      <img id="smalllogo" src="/templates/header/myh_logo_white_big_shaded_small.png" alt="myh.se" />
-    </a>
-
-    <nav aria-label="Huvudmeny">
-      <label for="ham-check" id="hamburger">&#9776;</label>
-      <input type="checkbox" name="ham-check" id="ham-check" />
-      <ul class="navSticky">
-        <li class="navItem"><a href="/omOss/omOss.html">Om oss</a></li>
-        <li class="navItem">
-          <a href="/verksamhetsOmraden/verksamhetsOmraden.html">Verksamhetsområden</a>
-        </li>
-        <li class="navItem">
-          <a href="/lagarReglerTillsyn/lagarReglerTillsyn.html">Lagar, Regler, Tillsyn</a>
-        </li>
-        <li class="navItem">
-          <a href="/statistik/statistik.html">Statistik</a>
-        </li>
-        <li class="navItem">
-          <a href="/publikationer/publikationer.html">Publikationer</a>
-        </li>
-        <li class="navItem">
-          <a href="/nyhetsRum/nyhetsRum.html">Nyhetsrum</a>
-        </li>
-        <li class="navItem"><a href="/kontakt/kontakt.html">Kontakt</a></li>
-      </ul>
-    </nav>
-  </header>
-  <div role="banner" id="banner">
-    <nav aria-label="Sekundärmeny">
-      <ul>
-        <li>
-          <a aria-label="View this site in English" href="#">In English</a>
-        </li>
-        <li><a href="#">Lättläst</a></li>
-        <li><a href="#">Anpassa</a></li>
-        <li><a href="#">Mina sidor</a></li>
-      </ul>
-    </nav>
-    <form>
-      <label for="searchField"><i></i></label>
-      <input type="search" aria-label="Sök på webbplatsen" value="Sök" />
-      <a href="#" aria-label="Sök på webbplatsen" class="button"><i class="fas fa-search"></i> Sök</a>
-      <!-- <input class="button" type="submit" value="Skicka"> -->
-    </form>
-    <!-- <form>
->>>>>>> 2c136879ac7c43cd191535a7074fe1bc39815d21
-      <label for="searchField"><span>Sök</span></label>
-      <input type="search" id="searchField" placeholder="Ange sökord" />
-      <a href="#" aria-label="Sök på webbplatsen" class="button"><i class="fas fa-search"></i> Sök</a>
-    </form> -->
-  </div>
-  <main>
-    <div class="card">
-      <ul class="breadcrumbs">
-        <li><a href="#">Start</a></li>
-        <li><a href="#">Nästa</a></li>
-        <li>Nästa</li>
-      </ul>
-
-      <h1>Rubrik</h1>
-      <p>
-        After the postoperative check at the rear of the arcade showed him
-        broken lengths of damp chipboard and the dripping chassis of a gutted
-        game console. Before they could stampede, take flight from the Chinese
-        program’s thrust, a worrying impression of solid fluidity, as though
-        the shards of a broken mirror bent and elongated as they rotated, but
-        it never told the correct time. He’d waited in the dark, curled in his
-        jacket pocket. Case felt the edge of the bright void beyond the chain
-        link. Images formed and reformed: a flickering montage of the Sprawl’s
-        towers and ragged Fuller domes, dim figures moving toward him in the
-        tunnel’s ceiling. A graphic representation of data abstracted from the
-        banks of every computer in the coffin for Armitage’s call. Still it
-        was a square of faint light. Light from a service hatch at the rear
-        wall dulling the roar of the bright void beyond the chain link. A Dali
-        clock hung on the wall between the bookcases, its distorted face
-        sagging to the Tank War, mouth touched with hot gold as a gliding
-        cursor struck sparks from the wall of a junked console. A narrow wedge
-        of light from a half-open service hatch framed a heap of discarded
-        fiber optics and the chassis of a broken mirror bent and elongated as
-        they fell.
-      </p>
     </div>
-  </main>
-  <!-- flex footer-->
-  <footer class="footer">
-    <section class="kontakt-list">
-      <h3>Kontakt</h3>
-      <ul>
-        <li>
-          <h4>Digitalt kundforum</h4>
-          <p>
-            Har du en fråga? Besök vårt kundforum,
-            <a href="#">forum.myh.se</a>
-          </p>
-        </li>
-        <li>
-          <h4>Telefon</h4>
-          <p>
-            Ring vår växel
-            <a href="tel:010-2090100"> 010-209 01 00</a>. Växeln är öppen
-            vardagar 9.00 - 11.30, 13.00 - 15.00
-          </p>
-        </li>
-        <li>
-          <h4>Press</h4>
-          <p>
-            Presskontakter och pressmeddelanden finns i vårt
-            <a href="nyhetsrum.html">nyhetsrum</a>
-          </p>
-        </li>
-        <li>
-          <h4>E-post</h4>
-          <p>
-            Allmänna frågor / synpunkter:
-            <a href="mailto:info@myh.se">info@myh.se</a>
-            <br />
-            Registrator:
-            <a href="mailto:registrator@myh.se">registrator@myh.se</a>
-          </p>
-        </li>
-        <li>
-          <h4>Adress</h4>
-          <p>
-            Myndigheten för yrkeshögskolan <br />
-            Box 145 <br />
-            721 05 Västerås
-          </p>
-        </li>
-      </ul>
-    </section>
-    <section class="about-list-footer">
-      <h3>Om webbplatsen</h3>
-      <ul class="page-nav">
-        <li><a href="#">Använda webbplatsen</a></li>
-        <li><a href="#">Om webbkakor (cookies)</a></li>
-        <li><a href="#">Webbkarta</a></li>
-        <li><a href="#">Tillgänglighetsredogörelse</a></li>
-      </ul>
-      <h3>Våra övriga webbplatser</h3>
-      <ul class="page-nav">
-        <li><a href="#">www.yrkeshogskolan.se</a></li>
-        <li><a href="#">www.konstkulturutbildning.se</a></li>
-        <li><a href="#">www.blitolk.nu</a></li>
-        <li><a href="#">www.seqf.se</a></li>
-      </ul>
-      <h3>Håll dig informerad</h3>
-      <h4>
-        <a><i class="fa fa-youtube"></i> Youtube</a>
-      </h4>
-      <h4>Ansvarig utgivare</h4>
-      <p>Thomas Persson, generaldirektör MYH.</p>
-    </section>
-  </footer>
-</body>
+    <main>
+      <div class="card">
+        <ul class="breadcrumbs">
+          <li><a href="#">Start</a></li>
+          <li><a href="#">Nästa</a></li>
+          <li>Nästa</li>
+        </ul>
 
+        <h1>Rubrik</h1>
+        <p>
+          After the postoperative check at the rear of the arcade showed him
+          broken lengths of damp chipboard and the dripping chassis of a gutted
+          game console. Before they could stampede, take flight from the Chinese
+          program’s thrust, a worrying impression of solid fluidity, as though
+          the shards of a broken mirror bent and elongated as they rotated, but
+          it never told the correct time. He’d waited in the dark, curled in his
+          jacket pocket. Case felt the edge of the bright void beyond the chain
+          link. Images formed and reformed: a flickering montage of the Sprawl’s
+          towers and ragged Fuller domes, dim figures moving toward him in the
+          tunnel’s ceiling. A graphic representation of data abstracted from the
+          banks of every computer in the coffin for Armitage’s call. Still it
+          was a square of faint light. Light from a service hatch at the rear
+          wall dulling the roar of the bright void beyond the chain link. A Dali
+          clock hung on the wall between the bookcases, its distorted face
+          sagging to the Tank War, mouth touched with hot gold as a gliding
+          cursor struck sparks from the wall of a junked console. A narrow wedge
+          of light from a half-open service hatch framed a heap of discarded
+          fiber optics and the chassis of a broken mirror bent and elongated as
+          they fell.
+        </p>
+      </div>
+    </main>
+    <!-- flex footer-->
+    <footer class="footer">
+      <section class="kontakt-list">
+        <h3>Kontakt</h3>
+        <ul>
+          <li>
+            <h4>Digitalt kundforum</h4>
+            <p>
+              Har du en fråga? Besök vårt kundforum,
+              <a href="#">forum.myh.se</a>
+            </p>
+          </li>
+          <li>
+            <h4>Telefon</h4>
+            <p>
+              Ring vår växel
+              <a href="tel:010-2090100"> 010-209 01 00</a>. Växeln är öppen
+              vardagar 9.00 - 11.30, 13.00 - 15.00
+            </p>
+          </li>
+          <li>
+            <h4>Press</h4>
+            <p>
+              Presskontakter och pressmeddelanden finns i vårt
+              <a href="nyhetsrum.html">nyhetsrum</a>
+            </p>
+          </li>
+          <li>
+            <h4>E-post</h4>
+            <p>
+              Allmänna frågor / synpunkter:
+              <a href="mailto:info@myh.se">info@myh.se</a>
+              <br />
+              Registrator:
+              <a href="mailto:registrator@myh.se">registrator@myh.se</a>
+            </p>
+          </li>
+          <li>
+            <h4>Adress</h4>
+            <p>
+              Myndigheten för yrkeshögskolan <br />
+              Box 145 <br />
+              721 05 Västerås
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="about-list-footer">
+        <h3>Om webbplatsen</h3>
+        <ul class="page-nav">
+          <li><a href="#">Använda webbplatsen</a></li>
+          <li><a href="#">Om webbkakor (cookies)</a></li>
+          <li><a href="#">Webbkarta</a></li>
+          <li><a href="#">Tillgänglighetsredogörelse</a></li>
+        </ul>
+        <h3>Våra övriga webbplatser</h3>
+        <ul class="page-nav">
+          <li><a href="#">www.yrkeshogskolan.se</a></li>
+          <li><a href="#">www.konstkulturutbildning.se</a></li>
+          <li><a href="#">www.blitolk.nu</a></li>
+          <li><a href="#">www.seqf.se</a></li>
+        </ul>
+        <h3>Håll dig informerad</h3>
+        <h4>
+          <a><i class="fa fa-youtube"></i> Youtube</a>
+        </h4>
+        <h4>Ansvarig utgivare</h4>
+        <p>Thomas Persson, generaldirektör MYH.</p>
+      </section>
+    </footer>
+  </body>
 </html>
