--- a/statistik/style.scss
+++ b/statistik/style.scss
@@ -1,84 +1,87 @@
 main {
-    width: 85%;
+  width: 85%;
+  margin: 0 auto;
+}
+.link-list {
+  background-color: rgb(70, 70, 70);
+  color: white;
+  padding: 1em;
+  max-height: 450px;
+  margin: 1em 1em 1em 1em;
+  max-width: 50%;
+  min-width: 400px;
+  h2 {
+    border-bottom: 2px solid black;
+    padding-bottom: 0.5em;
+  }
+  ul {
+    padding: 0;
+    li {
+      list-style-type: none;
+      a {
+        color: white;
+        text-decoration: none;
+      }
+    }
+  }
+}
+article.card {
+  background-color: #f5d547;
+}
+.col-2-3.card {
+  margin: 1em;
+  padding: 1em;
+}
+.img-container {
+  text-align: center;
+  background-color: yellow;
+  img {
+    width: 50%;
     margin: 0 auto;
   }
-  .link-list {
-    background-color: rgb(70, 70, 70);
-    color: white;
-    padding: 1em;
-    max-height: 450px;
-    margin: 1em 1em 1em 1em;
-    max-width: 50%;
-    min-width: 400px;
-    h2 {
-      border-bottom: 2px solid black;
-      padding-bottom: 0.5em;
-    }
-    ul {
-      padding: 0;
-      li {
-        list-style-type: none;
-        a {
-          color: white;
-          text-decoration: none;
-        }
-      }
-    }
-  }
-  .col-2-3.card {
-    margin: 1em;
-    padding: 1em;
-  }
-  .img-container {
+}
+.card {
+  box-shadow: 1px 1px 3px black;
+}
+.col1 {
+  min-width: 33vw;
+}
+.icons {
+  border: 1px solid rgb(70, 70, 70);
+  border-radius: 5px;
+  width: 50%;
+  margin: 1em 0 1em 0.5em;
+  padding: 1em;
+  font-size: 1.5em;
+  min-width: 400px;
+  display: inline-block;
+  h3 {
     text-align: center;
-    background-color: yellow;
-    img {
-      width: 50%;
-      margin: 0 auto;
+    font-size: 1.1em;
+    border-bottom: 1px solid grey;
+    margin: 0;
+  }
+  ul {
+    list-style-type: none;
+    text-align: center;
+    padding: 0;
+    li {
+      display: inline-block;
     }
   }
-  .card {
-    box-shadow: 1px 1px 3px black;
-  }
-  .col1 {
-    min-width: 33vw;
+}
+//Hannes' code input ends here
+
+@media only screen and (max-width: 999px) {
+  .link-list {
+    margin: 0 auto;
+    max-width: 70%;
+    min-width: auto;
   }
   .icons {
-    border: 1px solid rgb(70, 70, 70);
-    border-radius: 5px;
-    width: 50%;
-    margin: 1em 0 1em 0.5em;
-    padding: 1em;
-    font-size: 1.5em;
-    min-width: 400px;
-    display: inline-block;
-    h3 {
-      text-align: center;
-      font-size: 1.1em;
-      border-bottom: 1px solid grey;
-      margin: 0;
-    }
-    ul {
-      list-style-type: none;
-      text-align: center;
-      padding: 0;
-      li {
-        display: inline-block;
-      }
-    }
+    width: 70%;
+    display: block;
+    margin: 1em auto;
+    min-width: auto;
   }
-  //Hannes' code input ends here
-  
-  @media only screen and (max-width: 999px) {
-    .link-list {
-      margin: 0 auto;
-      max-width: 70%;
-      min-width: auto;
-    }
-    .icons {
-      width: 70%;
-      display: block;
-      margin: 1em auto;
-      min-width: auto;
-    }
-  }
+}
