--- a/lagarReglerTillsyn/style.css
+++ b/lagarReglerTillsyn/style.css
@@ -8,7 +8,7 @@ main {
   color: white;
   padding: 1em;
   max-height: 450px;
-  margin: 1em 1em 1em 1em;
+  margin: 1em 1em 1em 0;
   max-width: 50%;
   min-width: 400px;
 }
@@ -59,8 +59,7 @@ main {
   border: 1px solid #464646;
   border-radius: 5px;
   width: 50%;
-  margin: 1em 0 1em 0.5em;
-  padding: 1em;
+  padding: 1em 0 1em 1em;
   font-size: 1.5em;
   min-width: 400px;
   display: inline-block;
