cleans some scss

--- a/index/style.scss
+++ b/index/style.scss
@@ -66,8 +66,6 @@ h2 {
   margin: 0.5em 0 1em 0;
   z-index: 1;
 }
-/* GET THIS CENTERRED ALONG WITH OTHER CARDS NEXT? */
-/* STYLE IN A ROW WITH ICONS */
 .calendar.card {
   max-height: 450px;
   grid-area: calendar;
@@ -180,8 +178,8 @@ main.grid {
   }
   .otherlinks {
     flex-direction: column;
-  }
-  .otherlinks a {
-    width: 50%;
+    a {
+      width: 50%;
+    }
   }
 }
