--- a/lagarReglerTillsyn/style.css
+++ b/lagarReglerTillsyn/style.css
@@ -9,8 +9,6 @@ main {
   padding: 1em;
   max-height: 450px;
   margin: 1em 1em 1em 0;
-  max-width: 50%;
-  min-width: 400px;
 }
 
 .link-list h2 {
@@ -32,8 +30,7 @@ main {
 }
 
 .col-2-3.card {
-  margin: 1em;
-  padding: 1em;
+  margin-top: 1em;
 }
 
 .img-container {
@@ -59,10 +56,11 @@ main {
   border: 1px solid #464646;
   border-radius: 5px;
   width: 50%;
-  padding: 1em 0 1em 1em;
+  padding: 0.4em;
   font-size: 1.5em;
   min-width: 400px;
-  display: inline-block;
+  display: block;
+  margin: 0 auto;
 }
 
 .icons h3 {
