--- a/lagarReglerTillsyn/style.scss
+++ b/lagarReglerTillsyn/style.scss
@@ -10,8 +10,6 @@ main {
   padding: 1em;
   max-height: 450px;
   margin: 1em 1em 1em 0;
-  max-width: 50%;
-  min-width: 400px;
   h2 {
     border-bottom: 2px solid black;
     padding-bottom: 0.5em;
@@ -28,8 +26,7 @@ main {
   }
 }
 .col-2-3.card {
-  margin: 1em;
-  padding: 1em;
+  margin-top: 1em;
 }
 .img-container {
   text-align: center;
@@ -62,10 +59,11 @@ main {
   border: 1px solid rgb(70, 70, 70);
   border-radius: 5px;
   width: 50%;
-  padding: 1em 0 1em 1em;
+  padding: 0.4em;
   font-size: 1.5em;
   min-width: 400px;
-  display: inline-block;
+  display: block;
+  margin: 0 auto;
   h3 {
     text-align: center;
     font-size: 1.1em;
