--- a/verksamhetsOmraden/verksamhetsOmraden.css
+++ b/verksamhetsOmraden/verksamhetsOmraden.css
@@ -5,6 +5,11 @@
   min-height: 350px;
 }
 
+.card img {
+  width: 100%;
+  max-height: 200px;
+}
+
 div.intro.card {
   min-height: 100px;
   display: block;
